--- a/jenshin.html
+++ b/jenshin.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+<html>
 <header>
     <meta charset= "UTF-8">
     <title>jenshin impact</title>
 </header>
 <body>
-    <div><h1>Jenshin Impact</h1></div>
+    <h1>Jenshin Impact</h1>
     <a href= "https://genshin.mihoyo.com/en/gift">Redeem</a>
     <a href= "https://genshin.mihoyo.com/en/">Official Site</a>
     <a href= "https://genshin.mihoyo.com/en/character/mondstadt?char=0">Characters</a>
-    <div><h2>Enter the magical world of Teyvat</h2></div>
+    <h2>Enter the magical world of Teyvat</h2>
     <div>Collect an ever expanding cast of characters and explore different regions alongside them.</div>
     <a href= "https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/">Download</a>
     <img src="wp.png">
-    <div><h3>We got cryo waifus</h3></div>
+    <h3>We got cryo waifus</h3>
     <a href=="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjwrJ2cvob1AhVNU
     WwGHcnSBwwQFnoECAYQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img src="https://img.ga
     merjournalist.com/spai/q_lossy+ret_img+to_webp/https://cdn.gamerjournalist.com/primary/2021/
@@ -34,5 +35,11 @@
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pcgamesn.com%2Fgenshin-impact%2Fshenhe-banner-release-date&psig=AOvVaw16-o4U
     U7ZqeP3-7E484V7b&ust=1640781358617000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPC46YXBhvUCFQAAAAAdAAAAABAD"></a>
     <div>homicidal exorcist</div>
-    
+    <p><em>"Oh, don't be nervous. My experiments may be dangerous, but no one gets hurt... most of the time."</em></p>
+    <div>-Albedo (Mad scientist)</div>
+    <div><strong>What else could you possibly want?</strong></div>
+    <div>come join the adventure now</div>
+    <button formaction="https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/">DOWNLOAD</button>
+
 </body>
+</html>
