--- a/jenshin.html
+++ b/jenshin.html
@@ -12,34 +12,28 @@
     <h2>Enter the magical world of Teyvat</h2>
     <div>Collect an ever expanding cast of characters and explore different regions alongside them.</div>
     <a href= "https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/">Download</a>
-    <img src="wp.png">
+    <a href="https://youtu.be/dQw4w9WgXcQ"><img src="wp.png"></a>
     <h3>We got cryo waifus</h3>
     <a href=="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjwrJ2cvob1AhVNU
-    WwGHcnSBwwQFnoECAYQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img src="https://img.ga
-    merjournalist.com/spai/q_lossy+ret_img+to_webp/https://cdn.gamerjournalist.com/primary/2021/
-    01/Genshin-Impact-Ganyu-Talents-Constellations-and-Ascension-Materials-1024x576.jpg"></a>
+    WwGHcnSBwwQFnoECAYQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img src="ganyu.jpg"></a>
     <div> GOAT waifu </div>
     <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&ua
     ct=8&ved=2ahUKEwjWiuGEv4b1AhVW7HMBHQ3hCKgQFnoECAQQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FEula&usg=AOvVaw2iNhm6DnxcsG_hY44TQLGg">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dualshockers.com%2Fgenshin-impact-eula-quest-leaked-lore-new-cryo-waifu%2F&psi
-    g=AOvVaw3nwZE9WnQsFUb-TlfYtrzP&ust=1640780911883000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCMCc36-_hvUCFQAAAAAdAAAAABAf"></a>
+    <img src="eula.jpg"></a>
     <div>Came out of nowhere</div>
     <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj47
     pThv4b1AhXvT2wGHQ2LBrUQFnoECBgQAw&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FKamisato_Ayaka&usg=AOvVaw0pBat60esWP82sB8244LBb">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fprogameguides.com%2Fgenshin-impact-item%2Fgenshin-impact-ayaka-skills-talents-con
-    stellations-ascension%2F&psig=AOvVaw2xfVw79A9noKmkZDPbxH5F&ust=1640781054024000&source=images&cd=vfe&ved=0CAgQjRxqFwo
-    TCIiq2vK_hvUCFQAAAAAdAAAAABAN"></a>
+    <img src="ayaka.jpg"></a>
     <div>came after 1 year</div>
     <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUK
     Ewi0vrn2wIb1AhWiUGwGHQ4VBu0QFnoECAMQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FShenhe&usg=AOvVaw2fKu_AYzNSVHxI_OBTqGIW">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pcgamesn.com%2Fgenshin-impact%2Fshenhe-banner-release-date&psig=AOvVaw16-o4U
-    U7ZqeP3-7E484V7b&ust=1640781358617000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPC46YXBhvUCFQAAAAAdAAAAABAD"></a>
+    <img src="shenhe.jpg"></a>
     <div>homicidal exorcist</div>
     <p><em>"Oh, don't be nervous. My experiments may be dangerous, but no one gets hurt... most of the time."</em></p>
     <div>-Albedo (Mad scientist)</div>
     <div><strong>What else could you possibly want?</strong></div>
     <div>come join the adventure now</div>
-    <button formaction="https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/">DOWNLOAD</button>
+    <a href="https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/"><button>SIGN UP</button></a>
 
 </body>
 </html>
