--- a/jenshin.html
+++ b/jenshin.html
@@ -3,16 +3,17 @@
 <header>
     <meta charset= "UTF-8">
     <title>jenshin impact</title>
+    <link href="jenshin.css" rel="stylesheet" type="text/css">
 </header>
 <body>
     <h1>Jenshin Impact</h1>
-    <a href= "https://genshin.mihoyo.com/en/gift">Redeem</a>
-    <a href= "https://genshin.mihoyo.com/en/">Official Site</a>
-    <a href= "https://genshin.mihoyo.com/en/character/mondstadt?char=0">Characters</a>
+    <a href= "https://genshin.mihoyo.com/en/gift" class="HL">Redeem</a>
+    <a href= "https://genshin.mihoyo.com/en/" class="HL">Official Site</a>
+    <a href= "https://genshin.mihoyo.com/en/character/mondstadt?char=0" class="HL">Characters</a>
     <h2>Enter the magical world of Teyvat</h2>
-    <div>Collect an ever expanding cast of characters and explore different regions alongside them.</div>
+    <div class="sec-text">Collect an ever expanding cast of characters and explore different regions alongside them.</div>
     <a href= "https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/">Download</a>
-    <a href="https://youtu.be/dQw4w9WgXcQ"><img src="wp.png"></a>
+    <a href="https://youtu.be/dQw4w9WgXcQ"><img src="wp.png" class="main-img"></a>
     <h3>We got cryo waifus</h3>
     <a href=="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjwrJ2cvob1AhVNU
     WwGHcnSBwwQFnoECAYQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img src="ganyu.jpg"></a>
@@ -29,7 +30,7 @@
     Ewi0vrn2wIb1AhWiUGwGHQ4VBu0QFnoECAMQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FShenhe&usg=AOvVaw2fKu_AYzNSVHxI_OBTqGIW">
     <img src="shenhe.jpg"></a>
     <div>homicidal exorcist</div>
-    <p><em>"Oh, don't be nervous. My experiments may be dangerous, but no one gets hurt... most of the time."</em></p>
+    <p class="quote"><em>"Oh, don't be nervous. My experiments may be dangerous, but no one gets hurt... most of the time."</em></p>
     <div>-Albedo (Mad scientist)</div>
     <div><strong>What else could you possibly want?</strong></div>
     <div>come join the adventure now</div>
