--- a/jenshin.html
+++ b/jenshin.html
@@ -3,7 +3,7 @@
 <header>
     <meta charset= "UTF-8">
     <title>jenshin impact</title>
-    <link href="jenshin.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="jenshin.css" type= "text/css">
 </header>
 <body>
     <h1>Jenshin Impact</h1>
