--- a/jenshin.html
+++ b/jenshin.html
@@ -6,35 +6,42 @@
     <link rel="stylesheet" href="jenshin.css" type= "text/css">
 </header>
 <body>
-    <h1>Jenshin Impact</h1>
-    <a href= "https://genshin.mihoyo.com/en/gift" class="HL">Redeem</a>
-    <a href= "https://genshin.mihoyo.com/en/" class="HL">Official Site</a>
-    <a href= "https://genshin.mihoyo.com/en/character/mondstadt?char=0" class="HL">Characters</a>
-    <h2>Enter the magical world of Teyvat</h2>
-    <div class="sec-text">Collect an ever expanding cast of characters and explore different regions alongside them.</div>
-    <a href= "https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/">Download</a>
-    <a href="https://youtu.be/dQw4w9WgXcQ"><img src="wp.png" class="main-img"></a>
-    <h3>We got cryo waifus</h3>
-    <a href=="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjwrJ2cvob1AhVNU
-    WwGHcnSBwwQFnoECAYQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img src="ganyu.jpg"></a>
-    <div> GOAT waifu </div>
-    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&ua
-    ct=8&ved=2ahUKEwjWiuGEv4b1AhVW7HMBHQ3hCKgQFnoECAQQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FEula&usg=AOvVaw2iNhm6DnxcsG_hY44TQLGg">
-    <img src="eula.jpg"></a>
-    <div>Came out of nowhere</div>
-    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj47
-    pThv4b1AhXvT2wGHQ2LBrUQFnoECBgQAw&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FKamisato_Ayaka&usg=AOvVaw0pBat60esWP82sB8244LBb">
-    <img src="ayaka.jpg"></a>
-    <div>came after 1 year</div>
-    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUK
-    Ewi0vrn2wIb1AhWiUGwGHQ4VBu0QFnoECAMQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FShenhe&usg=AOvVaw2fKu_AYzNSVHxI_OBTqGIW">
-    <img src="shenhe.jpg"></a>
-    <div>homicidal exorcist</div>
-    <p class="quote"><em>"Oh, don't be nervous. My experiments may be dangerous, but no one gets hurt... most of the time."</em></p>
-    <div>-Albedo (Mad scientist)</div>
-    <div><strong>What else could you possibly want?</strong></div>
-    <div>come join the adventure now</div>
-    <a href="https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/"><button>SIGN UP</button></a>
-
+    <div>
+     <h1><span>Jenshin Impact</span></h1>
+     <a href= "https://genshin.mihoyo.com/en/gift" class="HL">Redeem</a>
+     <a href= "https://genshin.mihoyo.com/en/" class="HL">Official Site</a>
+     <a href= "https://genshin.mihoyo.com/en/character/mondstadt?char=0" class="HL">Characters</a>
+    </div>
+    <div>
+     <h2>Enter the magical world of Teyvat</h2>
+     <div class="sec-text">Collect an ever expanding cast of characters and explore different regions alongside them.</div>
+     <a href= "https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/" class="b1"><button>Download</button></a>
+     <a href="https://youtu.be/dQw4w9WgXcQ"><img src="wp.png" class="main-img"></a>
+    </div>
+    <div>
+     <h3>We got cryo waifus</h3>
+     <a href=="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjwrJ2cvob1AhVNU
+     WwGHcnSBwwQFnoECAYQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img src="ganyu.jpg"></a>
+     <div> GOAT waifu </div>
+     <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&ua
+     ct=8&ved=2ahUKEwjWiuGEv4b1AhVW7HMBHQ3hCKgQFnoECAQQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FEula&usg=AOvVaw2iNhm6DnxcsG_hY44TQLGg">
+     <img src="eula.jpg"></a>
+     <div>Came out of nowhere</div>
+     <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj47
+     pThv4b1AhXvT2wGHQ2LBrUQFnoECBgQAw&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FKamisato_Ayaka&usg=AOvVaw0pBat60esWP82sB8244LBb">
+     <img src="ayaka.jpg"></a>
+     <div>came after 1 year</div>
+     <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUK
+     Ewi0vrn2wIb1AhWiUGwGHQ4VBu0QFnoECAMQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FShenhe&usg=AOvVaw2fKu_AYzNSVHxI_OBTqGIW">
+     <img src="shenhe.jpg"></a>
+     <div>homicidal exorcist</div>
+    </div>
+    <div>
+     <p class="quote"><em>"Oh, don't be nervous. My experiments may be dangerous, but no one gets hurt... most of the time."</em></p>
+     <div class="author">-Albedo (Mad scientist)</div>
+     <div class="call c1">What else could you possibly want?</div>
+     <div class="call c2">come join the adventure now</div>
+     <a href="https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/"><button>SIGN UP</button></a>
+    </div>
 </body>
 </html>
