--- a/jenshin.html
+++ b/jenshin.html
@@ -6,19 +6,21 @@
     <link rel="stylesheet" href="jenshin.css" type= "text/css">
 </header>
 <body>
-    <div>
+   <div class="box0">
+    <div class="flex-container box1">
      <h1><span>Jenshin Impact</span></h1>
      <a href= "https://genshin.mihoyo.com/en/gift" class="HL">Redeem</a>
      <a href= "https://genshin.mihoyo.com/en/" class="HL">Official Site</a>
      <a href= "https://genshin.mihoyo.com/en/character/mondstadt?char=0" class="HL">Characters</a>
     </div>
-    <div>
+    <div class="flex-container box2">
      <h2>Enter the magical world of Teyvat</h2>
      <div class="sec-text">Collect an ever expanding cast of characters and explore different regions alongside them.</div>
      <a href= "https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/" class="b1"><button>Download</button></a>
      <a href="https://youtu.be/dQw4w9WgXcQ"><img src="wp.png" class="main-img"></a>
     </div>
-    <div>
+   </div>
+    <div class="flex-container box3">
      <h3>We got cryo waifus</h3>
      <a href=="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjwrJ2cvob1AhVNU
      WwGHcnSBwwQFnoECAYQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img src="ganyu.jpg"></a>
@@ -36,9 +38,11 @@
      <img src="shenhe.jpg"></a>
      <div>homicidal exorcist</div>
     </div>
-    <div>
+    <div class="flex-container box4">
      <p class="quote"><em>"Oh, don't be nervous. My experiments may be dangerous, but no one gets hurt... most of the time."</em></p>
      <div class="author">-Albedo (Mad scientist)</div>
+    </div>
+    <div class="flex-container box5">
      <div class="call c1">What else could you possibly want?</div>
      <div class="call c2">come join the adventure now</div>
      <a href="https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/"><button>SIGN UP</button></a>
