--- a/jenshin.html
+++ b/jenshin.html
@@ -1,51 +1,87 @@
 <!DOCTYPE html>
 <html>
+
 <header>
     <meta charset= "UTF-8">
     <title>jenshin impact</title>
     <link rel="stylesheet" href="jenshin.css" type= "text/css">
 </header>
+
 <body>
-   <div class="box0">
+
+   <div class="flex-container box0">
     <div class="flex-container box1">
-     <h1><span>Jenshin Impact</span></h1>
+     <h1> <span>Jenshin Impact</span>
      <a href= "https://genshin.mihoyo.com/en/gift" class="HL">Redeem</a>
      <a href= "https://genshin.mihoyo.com/en/" class="HL">Official Site</a>
      <a href= "https://genshin.mihoyo.com/en/character/mondstadt?char=0" class="HL">Characters</a>
+     </h1>
     </div>
-    <div class="flex-container box2">
-     <h2>Enter the magical world of Teyvat</h2>
-     <div class="sec-text">Collect an ever expanding cast of characters and explore different regions alongside them.</div>
-     <a href= "https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/" class="b1"><button>Download</button></a>
+    
+
+    <div class="flex-container box2 ">
+     <div class="flex-container headerbox" style="display: inline-block;">
+        <h2>Enter the magical world of Teyvat</h2>
+        <div class="sec-text">Collect an ever expanding cast of characters and explore different regions alongside them.</div>
+        <a href= "https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/" class="b1"><button>Download</button></a>
+     </div>
+
+     <div class="flex-container imgbox" style="display: inline-block; vertical-align: middle;">
      <a href="https://youtu.be/dQw4w9WgXcQ"><img src="wp.png" class="main-img"></a>
+     </div>
+
     </div>
    </div>
-    <div class="flex-container box3">
+   
+   <div class="flex-container box3">
      <h3>We got cryo waifus</h3>
-     <a href=="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjwrJ2cvob1AhVNU
-     WwGHcnSBwwQFnoECAYQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img src="ganyu.jpg"></a>
+
+     <div class="box10">
+     <div class="box6">
+     <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjctpHh2JX1AhWk63MBHXxmAxwQ
+     FnoECAUQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FGanyu&usg=AOvVaw1beoPrhHdAO2-P0eiQps0y"><img class="im" src="ganyu.jpg"></a>
      <div> GOAT waifu </div>
+     </div>
+
+     <div class="box7">
      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&ua
      ct=8&ved=2ahUKEwjWiuGEv4b1AhVW7HMBHQ3hCKgQFnoECAQQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FEula&usg=AOvVaw2iNhm6DnxcsG_hY44TQLGg">
-     <img src="eula.jpg"></a>
+     <img class="im" src="eula.jpg"></a>
      <div>Came out of nowhere</div>
+     </div>
+
+     <div class="box8">
      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj47
      pThv4b1AhXvT2wGHQ2LBrUQFnoECBgQAw&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FKamisato_Ayaka&usg=AOvVaw0pBat60esWP82sB8244LBb">
-     <img src="ayaka.jpg"></a>
-     <div>came after 1 year</div>
+     <img class="im" src="ayaka.jpg"></a>
+     <div>Came after 1 year</div>
+     </div>
+
+     <div class="box9">
      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUK
      Ewi0vrn2wIb1AhWiUGwGHQ4VBu0QFnoECAMQAQ&url=https%3A%2F%2Fgenshin-impact.fandom.com%2Fwiki%2FShenhe&usg=AOvVaw2fKu_AYzNSVHxI_OBTqGIW">
-     <img src="shenhe.jpg"></a>
-     <div>homicidal exorcist</div>
+     <img class="im" src="shenhe.jpg"></a>
+     <div>Homicidal exorcist</div>
+     </div>
     </div>
+    </div>
+
+
     <div class="flex-container box4">
      <p class="quote"><em>"Oh, don't be nervous. My experiments may be dangerous, but no one gets hurt... most of the time."</em></p>
-     <div class="author">-Albedo (Mad scientist)</div>
+     <strong class="author">-Albedo (Mad scientist)</strong>
     </div>
+
+
     <div class="flex-container box5">
-     <div class="call c1">What else could you possibly want?</div>
-     <div class="call c2">come join the adventure now</div>
-     <a href="https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/"><button>SIGN UP</button></a>
+
+    <div class="box11" style="display: inline-block;">
+     <strong class="call c1" style="font-size: 20px;">What else could you possibly want?</strong>
+     <div class="call c2">Come join the adventure now!</div>
     </div>
+
+     <a href="https://genshin.mihoyo.com/pc-launcher/?utm_source=SEA_google_NZMY_SEM_brand_1022#/" style=" display:inline-block;"><button>SIGN UP</button></a>
+    </div>
+
 </body>
 </html>
